# keystone-keycloak-backend

./: .gitignore  .pre-commit-config.yaml  .stestr.conf  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  vendorize.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
hack/: keycloak-init.sh  keystone.sh  openldap-bootstrap.sh  openldap-entrypoint.sh  openldap-users.ldif  testrc
keystone_keycloak_backend/: __init__.py  conf.py  config.py  identity.py  utils.py
keystone_keycloak_backend/_vendor/keycloak/: _version.py  uma_permissions.py
keystone_keycloak_backend/_vendor/python_keycloak-3.3.0.dist-info/: METADATA  RECORD
keystone_keycloak_backend/tests/unit/: test_identity.py
tests/: __init__.py  test_identity.py
