[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keystone-keycloak-backend"
version = "0.2.0"
description = "Keycloak backend for OpenStack Keystone"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
    "python-keycloak>=3.6.1",
]

[dependency-groups]
dev = [
    "keystone>=26.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[project.entry-points."keystone.identity"]
keycloak = "keystone_keycloak_backend.identity:Driver"

[tool.isort]
profile = "black"
