[tool.poetry]
name = "keystone-keycloak-backend"
version = "0.5.0"
description = "Keycloak backend for OpenStack Keystone"
authors = ["Mohammed Naser <mnaser@vexxhost.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "keystone_keycloak_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
python-keycloak = "^3.6.1"
tenacity = ">=6.3.1,<9.2.0"

[tool.poetry.group.dev.dependencies]
keystone = ">=22.0.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
python-openstackclient = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."keystone.identity"]
keycloak = "keystone_keycloak_backend.identity:Driver"

[tool.isort]
profile = "black"
